--- a/Warmup-1-Java.ipynb
+++ b/Warmup-1-Java.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "public boolean monkeyTrouble(boolean aSmile, boolean bSmile) {\n",
-    "  return (aSmile==bSmile);\n",
+    "  return (aSmile == bSmile);\n",
     "}\n",
     "\n",
     "assertTrue(monkeyTrouble(true, true) == true);\n",
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "public int sumDouble(int a, int b) {\n",
-    "  if (a==b) {\n",
-    "    return 2*(a+b);\n",
+    "  if (a == b) {\n",
+    "    return 2 * (a + b);\n",
     "  }\n",
     "  \n",
-    "  return a+b;\n",
+    "  return a + b;\n",
     "}\n",
     "\n",
     "assertTrue(sumDouble(1, 2) == 3);\n",
@@ -118,17 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "public int diff21(int n) {\n",
     "  int diff = (n-21);\n",
     "  if (diff < 0) {\n",
-    "    diff = -1*diff;\n",
+    "    diff = -1 * diff;\n",
     "  }\n",
-    "  if (n>21) {\n",
-    "    return 2*diff;\n",
+    "  if (n > 21) {\n",
+    "    return 2 * diff;\n",
     "  }\n",
     "  return diff;\n",
     "}\n",
@@ -136,6 +136,219 @@
     "assertTrue(diff21(19) == 2);\n",
     "assertTrue(diff21(10) == 11);\n",
     "assertTrue(diff21(21) == 0);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## parrotTrouble\n",
+    "We have a loud talking parrot. The \"hour\" parameter is the current hour time in the range 0..23. We are in trouble if the parrot is talking and the hour is before 7 or after 20. Return true if we are in trouble.\n",
+    "\n",
+    "\n",
+    "parrotTrouble(true, 6) → true<br>\n",
+    "parrotTrouble(true, 7) → false<br>\n",
+    "parrotTrouble(false, 6) → false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean parrotTrouble(boolean talking, int hour) {\n",
+    "    return (talking && (hour < 7 || hour > 20));\n",
+    "}\n",
+    "\n",
+    "assertTrue(parrotTrouble(true, 6) == true);\n",
+    "assertTrue(parrotTrouble(true, 7) == false);\n",
+    "assertTrue(parrotTrouble(false, 6) == false);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## makes10\n",
+    "\n",
+    "Given 2 ints, a and b, return true if one if them is 10 or if their sum is 10.\n",
+    "\n",
+    "\n",
+    "makes10(9, 10) → true<br>\n",
+    "makes10(9, 9) → false<br>\n",
+    "makes10(1, 9) → true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean makes10(int a, int b) {\n",
+    "  return (a == 10 || b == 10 || a + b == 10);\n",
+    "}\n",
+    "\n",
+    "assertTrue(makes10(9, 10) == true);\n",
+    "assertTrue(makes10(9, 9) == false);\n",
+    "assertTrue(makes10(1, 9) == true);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## nearHundred\n",
+    "\n",
+    "Given an int n, return true if it is within 10 of 100 or 200. Note: Math.abs(num) computes the absolute value of a number.\n",
+    "\n",
+    "\n",
+    "nearHundred(93) → true<br>\n",
+    "nearHundred(90) → true<br>\n",
+    "nearHundred(89) → false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean nearHundred(int n) {\n",
+    "  return (Math.abs(n-100) <= 10 || Math.abs(n-200) <= 10);\n",
+    "}\n",
+    "\n",
+    "assertTrue(nearHundred(93) == true);\n",
+    "assertTrue(nearHundred(90) == true);\n",
+    "assertTrue(nearHundred(89) == false);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## posNeg\n",
+    "\n",
+    "Given 2 int values, return true if one is negative and one is positive. Except if the parameter \"negative\" is true, then return true only if both are negative.\n",
+    "\n",
+    "\n",
+    "posNeg(1, -1, false) → true<br>\n",
+    "posNeg(-1, 1, false) → true<br>\n",
+    "posNeg(-4, -5, true) → true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean posNeg(int a, int b, boolean negative) {\n",
+    "  return ((a * b < 0) && (!negative)) || ((negative) && (a < 0) && (b < 0));\n",
+    "}\n",
+    "\n",
+    "assertTrue(posNeg(1, -1, false) == true);\n",
+    "assertTrue(posNeg(-1, 1, false) == true);\n",
+    "assertTrue(posNeg(-4, -5, true) == true);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## notString\n",
+    "\n",
+    "Given a string, return a new string where \"not \" has been added to the front. However, if the string already begins with \"not\", return the string unchanged. Note: use .equals() to compare 2 strings.\n",
+    "\n",
+    "\n",
+    "notString(\"candy\") → \"not candy\"<br>\n",
+    "notString(\"x\") → \"not x\"<br>\n",
+    "notString(\"not bad\") → \"not bad\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String notString(String str) {\n",
+    "  if (str.startsWith(\"not\")) {\n",
+    "    return str;\n",
+    "  }\n",
+    "  \n",
+    "  return \"not \" + str;\n",
+    "}\n",
+    "\n",
+    "assertTrue(notString(\"candy\").equals(\"not candy\"));\n",
+    "assertTrue(notString(\"x\").equals(\"not x\"));\n",
+    "assertTrue(notString(\"not bad\").equals(\"not bad\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## missingChar\n",
+    "Given a non-empty string and an int n, return a new string where the char at index n has been removed. The value of n will be a valid index of a char in the original string (i.e. n will be in the range 0..str.length()-1 inclusive).\n",
+    "\n",
+    "\n",
+    "missingChar(\"kitten\", 1) → \"ktten\"<br>\n",
+    "missingChar(\"kitten\", 0) → \"itten\"<br>\n",
+    "missingChar(\"kitten\", 4) → \"kittn\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String missingChar(String str, int n) {\n",
+    "  String pre = str.substring(0, n);\n",
+    "  String post = str.substring(n+1, str.length());\n",
+    "  return pre + post;\n",
+    "}\n",
+    "\n",
+    "assertTrue(missingChar(\"kitten\", 1).equals(\"ktten\"));\n",
+    "assertTrue(missingChar(\"kitten\", 0).equals(\"itten\"));\n",
+    "assertTrue(missingChar(\"kitten\", 4).equals(\"kittn\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## frontBack\n",
+    "\n",
+    "Given a string, return a new string where the first and last chars have been exchanged.\n",
+    "\n",
+    "\n",
+    "frontBack(\"code\") → \"eodc\"<br>\n",
+    "frontBack(\"a\") → \"a\"<br>\n",
+    "frontBack(\"ab\") → \"ba\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String frontBack(String str) {\n",
+    "  if (str.length() <= 1) return str;\n",
+    "  \n",
+    "  char pre = str.charAt(str.length()-1);\n",
+    "  String mid = str.substring(1, str.length()-1);\n",
+    "  char post = str.charAt(0);\n",
+    "  \n",
+    "  return pre + mid + post;\n",
+    "}\n",
+    "\n",
+    "assertTrue(frontBack(\"code\").equals(\"eodc\"));\n",
+    "assertTrue(frontBack(\"a\").equals(\"a\"));\n",
+    "assertTrue(frontBack(\"ab\").equals(\"ba\"));"
    ]
   }
  ],
