--- a/Warmup-1-Java.ipynb
+++ b/Warmup-1-Java.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,6 +349,195 @@
     "assertTrue(frontBack(\"code\").equals(\"eodc\"));\n",
     "assertTrue(frontBack(\"a\").equals(\"a\"));\n",
     "assertTrue(frontBack(\"ab\").equals(\"ba\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## front3\n",
+    "\n",
+    "Given a string, we'll say that the front is the first 3 chars of the string. If the string length is less than 3, the front is whatever is there. Return a new string which is 3 copies of the front.\n",
+    "\n",
+    "\n",
+    "front3(\"Java\") → \"JavJavJav\"<br>\n",
+    "front3(\"Chocolate\") → \"ChoChoCho\"<br>\n",
+    "front3(\"abc\") → \"abcabcabc\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String front3(String str) {\n",
+    "  String front;\n",
+    "  \n",
+    "  if (str.length() <= 2) {\n",
+    "    front = str;\n",
+    "  }\n",
+    "  else {\n",
+    "    front = str.substring(0, 3);\n",
+    "  }\n",
+    "\n",
+    "  return front.concat(front).concat(front);\n",
+    "}\n",
+    "\n",
+    "assertTrue(front3(\"Java\").equals(\"JavJavJav\"));\n",
+    "assertTrue(front3(\"Chocolate\").equals(\"ChoChoCho\"));\n",
+    "assertTrue(front3(\"abc\").equals(\"abcabcabc\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## backAround\n",
+    "\n",
+    "Given a string, take the last char and return a new string with the last char added at the front and back, so \"cat\" yields \"tcatt\". The original string will be length 1 or more.\n",
+    "\n",
+    "\n",
+    "backAround(\"cat\") → \"tcatt\"<br>\n",
+    "backAround(\"Hello\") → \"oHelloo\"<br>\n",
+    "backAround(\"a\") → \"aaa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String backAround(String str) {\n",
+    "  char last = str.charAt(str.length() - 1);\n",
+    "  return last + str + last;\n",
+    "}\n",
+    "\n",
+    "assertTrue(backAround(\"cat\").equals(\"tcatt\"));\n",
+    "assertTrue(backAround(\"Hello\").equals(\"oHelloo\"));\n",
+    "assertTrue(backAround(\"a\").equals(\"aaa\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## or35\n",
+    "Return true if the given non-negative number is a multiple of 3 or a multiple of 5. Use the % \"mod\" operator -- see Introduction to Mod\n",
+    "\n",
+    "\n",
+    "or35(3) → true<br>\n",
+    "or35(10) → true<br>\n",
+    "or35(8) → false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean or35(int n) {\n",
+    "    return ( n % 3 == 0 || n % 5 == 0);\n",
+    "}\n",
+    "\n",
+    "assertTrue(or35(3) == true);\n",
+    "assertTrue(or35(10) == true);\n",
+    "assertTrue(or35(8) == false);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## front22\n",
+    "\n",
+    "Given a string, take the first 2 chars and return the string with the 2 chars added at both the front and back, so \"kitten\" yields\"kikittenki\". If the string length is less than 2, use whatever chars are there.\n",
+    "\n",
+    "\n",
+    "front22(\"kitten\") → \"kikittenki\"<br>\n",
+    "front22(\"Ha\") → \"HaHaHa\"<br>\n",
+    "front22(\"abc\") → \"ababcab\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String front22(String str) {\n",
+    "  String first2 = str;\n",
+    "  if (str.length() >= 2) {\n",
+    "    first2 = str.substring(0, 2);\n",
+    "  }\n",
+    "  \n",
+    "  return first2 + str + first2;\n",
+    "}\n",
+    "\n",
+    "assertTrue(front22(\"kitten\").equals(\"kikittenki\"));\n",
+    "assertTrue(front22(\"Ha\").equals(\"HaHaHa\"));\n",
+    "assertTrue(front22(\"abc\").equals(\"ababcab\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## startHi\n",
+    "\n",
+    "Given a string, return true if the string starts with \"hi\" and false otherwise.\n",
+    "\n",
+    "\n",
+    "startHi(\"hi there\") → true<br>\n",
+    "startHi(\"hi\") → true<br>\n",
+    "startHi(\"hello hi\") → false\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean startHi(String str) {\n",
+    "  if (str.length() < 2) {\n",
+    "      return false;\n",
+    "  }\n",
+    "  \n",
+    "  return (str.substring(0,2).equals(\"hi\"));\n",
+    "}\n",
+    "\n",
+    "\n",
+    "assertTrue(startHi(\"hi there\") == true);\n",
+    "assertTrue(startHi(\"hi\") == true);\n",
+    "assertTrue(startHi(\"hello hi\") == false);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## icyHot\n",
+    "\n",
+    "Given two temperatures, return true if one is less than 0 and the other is greater than 100.\n",
+    "\n",
+    "\n",
+    "icyHot(120, -1) → true<br>\n",
+    "icyHot(-1, 120) → true<br>\n",
+    "icyHot(2, 120) → false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean icyHot(int temp1, int temp2) {\n",
+    "  \n",
+    "}\n"
    ]
   }
  ],
