--- a/minAdditionalRoutes.ipynb
+++ b/minAdditionalRoutes.ipynb
@@ -6,19 +6,19 @@
    "source": [
     "## Problem: \n",
     "\n",
-    "An airline wants to know the minimum number of flight routes to support such that any given airport can connect to any other airport.\n",
+    "An airline wants to know the minimum number of flight routes to add such that any given airport can connect to any other airport.\n",
     "\n",
     "Given the following 3 inputs ...\n",
     "- a list of one way airport routes [origin, destination] --> <b><i>routes</i></b>\n",
     "- list of all airports --> <b><i>airports</i></b>\n",
-    "- a starting airport --> <b><i>startingAirport</b></i><br>\n",
+    "- a starting airport --> <b><i>startingAirport</b></i>\n",
     "\n",
-    "write the function <u><b>minAdditionalRoutes</u></b> that returns the <u>minimum</u> number of additional routes to add to all one way<b><i>routes</i></b> such that the <b><i>startingAirport</b></i> can travel to <u>any</u> any other airport in the list <b><i>airports</i></b>.  "
+    "complete the function <u><b>minAdditionalRoutes</u></b> to returns the <u>minimum</u> number of additional routes to add to the existing one way <b><i>routes</i></b> list such that a given <b><i>startingAirport</b></i> airport location can travel to <u>any</u> any other airport location in the list <b><i>airports</i></b>.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -135,7 +135,7 @@
     "        min_paths += 1\n",
     "        missing = missing.difference(set(_downstream_set))\n",
     "        if len(missing) == 0:\n",
-    "            return min_paths\n",
+    "            break\n",
     "    return min_paths\n",
     "\n",
     "# tests\n",
