Finish Warmup-1-Java

--- a/Warmup-1-Java.ipynb
+++ b/Warmup-1-Java.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,25 +737,284 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## intMax\n",
+    "\n",
+    "Given three int values, a b c, return the largest.\n",
+    "\n",
+    "\n",
+    "intMax(1, 2, 3) → 3<br>\n",
+    "intMax(1, 3, 2) → 3<br>\n",
+    "intMax(3, 2, 1) → 3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "public int intMax(int a, int b, int c) {\n",
+    "  return Math.max(Math.max(a, b), c);\n",
+    "}\n",
+    "\n",
+    "\n",
+    "assertTrue(intMax(1, 2, 3) == 3);\n",
+    "assertTrue(intMax(1, 3, 2) == 3);\n",
+    "assertTrue(intMax(3, 2, 1) == 3);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## close10\n",
+    "\n",
+    "Given 2 int values, return whichever value is nearest to the value 10, or return 0 in the event of a tie. Note that Math.abs(n) returns the absolute value of a number.\n",
+    "\n",
+    "\n",
+    "close10(8, 13) → 8<br>\n",
+    "close10(13, 8) → 8<br>\n",
+    "close10(13, 7) → 0"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "public int close10(int a, int b) {\n",
+    "  int aDiff = Math.abs(a - 10);\n",
+    "  int bDiff = Math.abs(b - 10);\n",
+    "  \n",
+    "  if (aDiff < bDiff){\n",
+    "    return a;\n",
+    "  }\n",
+    "  else if (aDiff > bDiff){\n",
+    "    return b;\n",
+    "  }\n",
+    "  else {\n",
+    "    return 0;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "assertTrue(close10(8, 13) == 8);\n",
+    "assertTrue(close10(13, 8) == 8);\n",
+    "assertTrue(close10(13, 7) == 0);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## in3050\n",
+    "\n",
+    "Given 2 int values, return true if they are both in the range 30..40 inclusive, or they are both in the range 40..50 inclusive.\n",
+    "\n",
+    "\n",
+    "in3050(30, 31) → true<br>\n",
+    "in3050(30, 41) → false<br>\n",
+    "in3050(40, 50) → true\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean in3050(int a, int b) {\n",
+    "  if ((a >= 30 && a <= 40) && (b >= 30 && b <= 40)){\n",
+    "    return true;\n",
+    "  }\n",
+    "  if ((a >= 40 && a <= 50) && (b >= 40 && b <= 50)){\n",
+    "    return true;\n",
+    "  }\n",
+    "  return false;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "assertTrue(in3050(30, 31) == true);\n",
+    "assertTrue(in3050(30, 41) == false);\n",
+    "assertTrue(in3050(40, 50) == true);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## max1020\n",
+    "\n",
+    "Given 2 positive int values, return the larger value that is in the range 10..20 inclusive, or return 0 if neither is in that range.\n",
+    "\n",
+    "\n",
+    "max1020(11, 19) → 19<br>\n",
+    "max1020(19, 11) → 19<br>\n",
+    "max1020(11, 9) → 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public int max1020(int a, int b) {\n",
+    "  int larger = Math.max(a, b);\n",
+    "  int smaller = Math.min(a, b);\n",
+    "  if (larger >= 10 && larger <= 20){\n",
+    "    return larger;\n",
+    "  }\n",
+    "  if (smaller >= 10 && smaller <= 20){\n",
+    "    return smaller;\n",
+    "  }\n",
+    "  return 0;\n",
+    "}\n",
+    "\n",
+    "assertTrue(max1020(11, 19) == 19);\n",
+    "assertTrue(max1020(19, 11) == 19);\n",
+    "assertTrue(max1020(11, 9) == 11);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## stringE\n",
+    "\n",
+    "Return true if the given string contains between 1 and 3 'e' chars.\n",
+    "\n",
+    "\n",
+    "stringE(\"Hello\") → true<br>\n",
+    "stringE(\"Heelle\") → true<br>\n",
+    "stringE(\"Heelele\") → false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean stringE(String str) {\n",
+    "  int counter = 0;\n",
+    "\n",
+    "  for (int n=0; n<str.length(); n++) {\n",
+    "    if (str.charAt(n) == 'e') {\n",
+    "        counter++;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  return (counter >= 1 && counter <= 3);\n",
+    "}\n",
+    "\n",
+    "assertTrue(stringE(\"Hello\") == true);\n",
+    "assertTrue(stringE(\"Heelle\") == true);\n",
+    "assertTrue(stringE(\"Heelele\") == false);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## lastDigit\n",
+    "Given two non-negative int values, return true if they have the same last digit, such as with 27 and 57. Note that the % \"mod\" operator computes remainders, so 17 % 10 is 7.\n",
+    "\n",
+    "\n",
+    "lastDigit(7, 17) → true<br>\n",
+    "lastDigit(6, 17) → false<br>\n",
+    "lastDigit(3, 113) → true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public boolean lastDigit(int a, int b) {\n",
+    "  return (a % 10 == b % 10);\n",
+    "}\n",
+    "\n",
+    "assertTrue(lastDigit(7, 17) == true);\n",
+    "assertTrue(lastDigit(6, 17) == false);\n",
+    "assertTrue(lastDigit(3, 113) == true);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## endUp\n",
+    "\n",
+    "Given a string, return a new string where the last 3 chars are now in upper case. If the string has less than 3 chars, uppercase whatever is there. Note that str.toUpperCase() returns the uppercase version of a string.\n",
+    "\n",
+    "\n",
+    "endUp(\"Hello\") → \"HeLLO\"<br>\n",
+    "endUp(\"hi there\") → \"hi thERE\"<br>\n",
+    "endUp(\"hi\") → \"HI\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String endUp(String str) {\n",
+    "  if (str.length() < 3) {\n",
+    "    return str.toUpperCase();\n",
+    "  }\n",
+    "  \n",
+    "  String pre = str.substring(0, str.length() - 3);\n",
+    "  String post = str.substring(str.length() - 3);\n",
+    "  \n",
+    "  return pre + post.toUpperCase();\n",
+    "}\n",
+    "\n",
+    "assertTrue(endUp(\"Hello\").equals(\"HeLLO\"));\n",
+    "assertTrue(endUp(\"hi there\").equals(\"hi thERE\"));\n",
+    "assertTrue(endUp(\"hi\").equals(\"HI\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## everyNth\n",
+    "\n",
+    "Given a non-empty string and an int N, return the string made starting with char 0, and then every Nth char of the string. So if N is 3, use char 0, 3, 6, ... and so on. N is 1 or more.\n",
+    "\n",
+    "\n",
+    "everyNth(\"Miracle\", 2) → \"Mrce\"<br>\n",
+    "everyNth(\"abcdefg\", 2) → \"aceg\"<br>\n",
+    "everyNth(\"abcdefg\", 3) → \"adg\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public String everyNth(String str, int n) {\n",
+    "  String result = \"\";\n",
+    "  \n",
+    "  for (int i=0; i<str.length(); i=i+n) {\n",
+    "    result = result + str.charAt(i);\n",
+    "  }\n",
+    "  return result;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "assertTrue(everyNth(\"Miracle\", 2).equals(\"Mrce\"));\n",
+    "assertTrue(everyNth(\"abcdefg\", 2).equals(\"aceg\"));\n",
+    "assertTrue(everyNth(\"abcdefg\", 3).equals(\"adg\"));\n"
+   ]
   }
  ],
  "metadata": {
